--- a/webapp/calllog/index.html
+++ b/webapp/calllog/index.html
@@ -2,7 +2,10 @@
 if($_GET['suppressem'] == 'yes'){
 	$suppressem = 'yes';
 }
-echo setUpHeader($page_name, 'return', $suppressem);
+
+// zbt: 5/10/12
+// still need to call setUpHeader for now, but we don't need the output from it
+setUpHeader($page_name, 'return', $suppressem);
 
 $page_name = 'index';
 $template_file = TEMPLATE_DIR."/".$page_name.'.tpl';
@@ -31,6 +34,9 @@ $tpl->assign('displayOpenCalls', displayOpenCalls($template_file));
 $tpl->assign('displayNewsFeed', displayNewsFeed($template_file));
 
 $tpl->parse('main');
-$tpl->out('main');
+$content = $tpl->text('main');
 
-echo setUpFooter('return');
+$ptpl = new PSUTemplate();
+$ptpl->assign('content', $content);
+$ptpl->display('psu_wrapper.tpl');
+
