--- a/webapp/calllog/new_call.html
+++ b/webapp/calllog/new_call.html
@@ -2,7 +2,7 @@
 ob_start();
 
 $page_name = "new_call";
-echo setupHeader($page_name, 'return'); // Set up the header
+setupHeader($page_name, 'return'); // Set up the header
 $template_file = TEMPLATE_DIR.'/'.$page_name.'.tpl';
 $tpl = new XTemplate($template_file);
 
@@ -236,6 +236,8 @@ else
 $tpl->parse('main.new_call_user_name');
 
 $tpl->parse('main');
-$tpl->out('main');
+$content = $tpl->text('main');
 
-echo setUpFooter();
+$ptpl = new PSUTemplate();
+$ptpl->assign('content', $content);
+$ptpl->display('psu_wrapper.tpl');
