--- a/webapp/calllog/index.html
+++ b/webapp/calllog/index.html
@@ -1,28 +1,14 @@
 <?php
-if($_GET['suppressem'] == 'yes'){
-	$suppressem = 'yes';
-}
+$tpl = new PSUTemplate;
 
-// zbt: 5/10/12
-// still need to call setUpHeader for now, but we don't need the output from it
-setUpHeader($page_name, 'return', $suppressem);
-
-$page_name = 'index';
-$template_file = TEMPLATE_DIR."/".$page_name.'.tpl';
-$tpl = new XTemplate($template_file);
+if( $_GET['search_string'] ) {
+	$results = CallLog::simple_search( $_GET['search_string'], $_GET['search_type'] );
+	$tpl->assign('search', $results);
+}//end if
 
 $tpl->assign('calllog_user_name', $_SESSION['username']);
 $tpl->assign('call_log_web_home', CALL_LOG_WEB_HOME);
-
-if($_GET['action'] != ""){ // if action is not empty, it will call the javascript function onLoad
-	$tpl->assign('action', $_GET['action']);
-	$tpl->assign('option', $_GET['option']);
-	$tpl->assign('group', $_GET['group']);
-	$tpl->assign('find_type', $_GET['find_type']);
-	$tpl->parse('main.js_action');
-}else{
-	$tpl->parse('main.not_js_action');
-}
+$tpl->assign('groups', getOpenCallGroups());
 
 $tpl->assign('search_options', PSUHTML::getSelectOptions($search_options, $_GET['find_type']));
 $tpl->assign('getDateTimeMonth', PSUHTML::getSelectOptions($GLOBALS['restore']->getDateTimeOptions('Month')));
@@ -30,13 +16,6 @@ $tpl->assign('getDateTimeDay', PSUHTML::getSelectOptions($GLOBALS['restore']->ge
 $tpl->assign('getDateTimeYear', PSUHTML::getSelectOptions($GLOBALS['restore']->getDateTimeOptions('Year'), date("Y")));
 
 $tpl->assign('displayRecoveryData', displayRecoveryData($template_file));
-$tpl->assign('displayOpenCalls', displayOpenCalls($template_file));
-$tpl->assign('displayNewsFeed', displayNewsFeed($template_file));
+$tpl->assign('blog', getNewsFeed());
 
-$tpl->parse('main');
-$content = $tpl->text('main');
-
-$ptpl = new PSUTemplate();
-$ptpl->assign('content', $content);
-$ptpl->display('psu_wrapper.tpl');
-
+$tpl->display('index.tpl');
