--- a/webapp/calllog/new_call.html
+++ b/webapp/calllog/new_call.html
@@ -4,7 +4,7 @@ ob_start();
 $page_name = "new_call";
 setupHeader($page_name, 'return'); // Set up the header
 $template_file = TEMPLATE_DIR.'/'.$page_name.'.tpl';
-$tpl = new XTemplate($template_file);
+$tpl = new PSU\Template;
 
 $go_back['option'] = ($_GET['option'])?$_GET['option']:'';
 $go_back['action'] = ($_GET['action'])?$_GET['action']:(($go_back['option'])?'searchUser':'');
@@ -12,18 +12,12 @@ $go_back['group'] = ($_GET['group'])?$_GET['group']:'none';
 $go_back['find_type'] = ($_GET['find_type'])?$_GET['find_type']:2;
 $go_back['page'] = ($_GET['page'])?$_GET['page']:'index.html';
 
-if($go_back['option'] == 'mygroup')
-{
+if($go_back['option'] == 'mygroup') {
 	$go_back['name'] = 'the '.$go_back['find_type'].' Group';
-}//end if
-else
-{
-	if($go_back['option'])
-	{
+} else {
+	if($go_back['option']) {
 		$go_back['name'] = $go_back['option'];
-	}//end if
-	else
-	{
+	} else {
 		$go_back['name'] = "Home";
 	}//end else
 }//end else
@@ -36,8 +30,7 @@ $tpl->assign('JS_WEB_DIR', JS_WEB_DIR);
 $tpl->assign('page_name', $page_name);
 
 //was a call_id provided?
-if( isset($_GET['call_id']) )
-{
+if( isset($_GET['call_id']) ) {
 	$call = $db->GetRow("SELECT * FROM call_log WHERE call_id = ?", (int)$_GET['call_id']);
 
 	$caller = $call['wp_id'] ? $call['wp_id'] : ($call['pidm'] ? $call['pidm'] : $call['caller_username']);
@@ -67,15 +60,10 @@ if( isset($_GET['call_id']) )
 
 	$num_open_calls = $db->GetOne("SELECT COUNT(*) FROM call_log, call_history WHERE call_log.call_id = call_history.call_id AND call_history.call_status = 'open' AND ({$where}) AND call_history.current='1'", $args);
 	$open_calls_info = $db->GetAll("SELECT * FROM call_log, call_history WHERE call_log.call_id = call_history.call_id AND call_history.call_status = 'open' AND ({$where}) AND call_history.current='1'", $args);
-	if($num_open_calls > 0)
-	{
+	if($num_open_calls > 0) {
 		$tpl->assign('num_open_calls', $num_open_calls);
-		$tpl->parse('main.new_call_user_name.check_open_calls.open_call_info');
-		$tpl->parse('main.new_call_user_name.check_open_calls');
 	}// end if
-}//end if
-else
-{
+} else {
 	$person = $GLOBALS['user']->getCallerData($_REQUEST['caller']);
 	if( $person == false ) {
 		die( htmlentities($_REQUEST['caller']) . ' is not a known person.' );
@@ -103,60 +91,49 @@ $its_group_options = Array();
 $its_group_options = getITSGroupOptions();
 
 // If cluster_building_id isSet, get it, select that building
-if(isSet($_REQUEST['cluster_building_id']))
-{
+if(isset($_REQUEST['cluster_building_id'])) {
 	$building_id = $_REQUEST['cluster_building_id'];
 	$tpl->assign('building_select_list', PSUHTML::getSelectOptions($building_options, $building_id));
-}
-else
-{
+} else {
 	$tpl->assign('building_select_list', PSUHTML::getSelectOptions($building_options, getBuildingID($person['address2'])));
 	$tpl->assign('location_building_room_number', $Building_Info[2]);
 }
 
 $tpl->assign('display_none_block', ($_GET['call_id']) ? 'block' : 'none');
 
-if(!$GLOBALS['user']->isFakeUser($person['email']))
-{
-	$tpl->parse('main.new_call_user_name.user_status');
-}//end if
-
 //**********[ Begin Attached Files Logic ]************//
-if($_GET['call_id'])
-{
-	if(file_exists($GLOBALS['uploads'].'/'.$_GET['call_id']))
-	{
+if($_GET['call_id']) {
+	$attached_files = array();
+
+	if(file_exists($GLOBALS['uploads'].'/'.$_GET['call_id'])) {
 		$files = scandir($GLOBALS['uploads'].'/'.$_GET['call_id']);
-		foreach($files as $file)
-		{
-			if($file != '.' && $file != '..')
-			{
-				$file_data = array('name' => $file, 'url'=>$HOST.'/webapp/calllog/files/'.$_GET['call_id'].'/'.$file);
-				$tpl->assign('file',$file_data);
-				$tpl->parse('main.new_call_user_name.files.file');
+		foreach($files as $file) {
+			if($file != '.' && $file != '..') {
+				$file_data = array('name' => $file, 'url'=> $GLOBALS['BASE_URL'] . '/files/'.$_GET['call_id'].'/'.$file);
+				$attached_files[] = $file_data;
 			}//end if	
 		}//end foreach
-		$tpl->parse('main.new_call_user_name.files');
 	}//end if
 }//end if
+
+$tpl->assign('files', $attached_files);
 //**********[ END Attached Files Logic ]************//
 
 //The following need to be changed to match the generic template.
-if ($_GET['call_id'])
-{
+if ($_GET['call_id']) {
+	$history = array();
+
 	$tpl->assign('call_id', $_GET['call_id']);
 	$sql = "SELECT * FROM call_log, call_history WHERE call_log.call_id = '{$_GET[call_id]}' AND call_log.call_id = call_history.call_id ORDER BY date_assigned {$GLOBALS['EMPLOYEE_INFO']['update_sort']}, time_assigned {$GLOBALS['EMPLOYEE_INFO']['update_sort']}";
-	if($call_details = $db->GetAll($sql))
-	{
-		foreach ($call_details as $history)
-		{
-			$history['comments'] = preg_replace("/[\*]{114}/", "____________________________________________", $history['comments']);
-			$history['comments'] = nl2br(strip_tags($history['comments']));
-			$tpl->assign('call_history', $history);
-			$tpl->parse('main.new_call_user_name.call_assignment_check.call_assignment_history');
-			$tpl->parse('main.new_call_user_name.call_assignment_history_hidden');
+	if($call_details = $db->GetAll($sql)) {
+		foreach ($call_details as $details) {
+			$details['comments'] = preg_replace("/[\*]{114}/", "____________________________________________", $details['comments']);
+			$details['comments'] = nl2br(strip_tags($details['comments']));
+			$history[] = $details;
 		}//end foreach
 	}//end if
+
+	$tpl->assign('history', $history);
 	
 	$sql = "SELECT * FROM call_log, call_history WHERE call_log.call_id = '{$_GET[call_id]}' AND call_log.call_id = call_history.call_id ORDER BY date_assigned DESC, time_assigned DESC LIMIT 1";
 	$getOpenCallDetailsValue = $db->GetRow($sql);
@@ -167,27 +144,22 @@ if ($_GET['call_id'])
 
 	$tpl->assign('call_history_id', $getOpenCallDetails[0]['id']);
 	$tpl->assign('details_name', "Update Information");
-	$tpl->assign('call_assigned_to', $GLOBALS['user']->callAssignedTo($tlc_users_options, $its_group_options, $tlc_assigned_to, $its_assigned_to));
+
+	$tpl->assign('tlc_select_list', PSUHTML::getSelectOptions($tlc_users_options, $tlc_assigned_to));
+	$tpl->assign('its_select_group_list', PSUHTML::getSelectOptions($its_group_options, $its_assigned_to));
 
 	if( $call_status == 'closed' ) {
-		$tpl->parse('main.new_call_user_name.call_closed');
+		$_SESSION['errors'][] = 'This call has been closed';
 	}
-
-	$tpl->parse('main.new_call_user_name.call_assignment_check');
-}
-else
-{
-	$tpl->assign('call_assigned_to', $GLOBALS['user']->callAssignedTo($tlc_users_options, $its_group_options));
+} else {
 	$tpl->assign('details_name', "Problem Information");
 	$tpl->assign('problem_details', $_GET['call_details']);
+	$tpl->assign('tlc_select_list', PSUHTML::getSelectOptions($tlc_users_options));
+	$tpl->assign('its_select_group_list', PSUHTML::getSelectOptions($its_group_options));
 }
 
-require_once 'PSUTemplate.class.php';
-$psutpl = new PSUTemplate();
-$psutpl->assign('details', $_GET['call_details']);
-$psutpl->assign('title', $_GET['title'] ?: $call['title']);
-$ticket_form = $psutpl->fetch( __DIR__ . '/templates/ticket_form.tpl' );
-$tpl->assign('ticket_form', $ticket_form);
+$tpl->assign('details', $_GET['call_details']);
+$tpl->assign('title', $_GET['title'] ?: $call['title']);
 
 $resnet_call = $open_calls_info[0]['call_type'];
 $db_phone = $open_calls_info[0]['caller_phone_number'];
@@ -196,8 +168,7 @@ $tpl->assign('restore_system_list', PSUHTML::getSelectOptions($restore_system_op
 $tpl->assign('restore_request_func', $GLOBALS['restore']->restoreRequestFunc());
 
 $tpl->assign('call_information', $GLOBALS['user']->callInformation($call_status_options, $call_priority_options, $call_status, $call_priority, $building_options, $building_id, $resnet_call));
-if($person['email'] != 'generic')
-{
+if($person['email'] != 'generic') {
 	$tpl->assign('caller_information', $GLOBALS['user']->getCallerInformation($caller, $_REQUEST['call_id'], $person));
 
 	$tpl->assign('caller_email', $GLOBALS['user']->userEmailFunction($person['username'], $_REQUEST['call_id'], $person));
@@ -214,27 +185,11 @@ if($person['email'] != 'generic')
 	}
 
 	$tpl->assign('call_history_summary', $GLOBALS['user']->userCallHistory($caller));
-}
-else
-{
+} else {
 	$tpl->assign('caller_information', $GLOBALS['user']->getCallerInformation('generic', $_REQUEST['call_id'], '', '',''));
 	$tpl->assign('call_history_summary', $GLOBALS['user']->userCallHistory('generic'));
-}
+}//end else
 
-if ($_REQUEST['call_id'])
-{
-	$tpl->assign('call_id', $_REQUEST['call_id']);
-	$tpl->parse('main.new_call_user_name.edit_call_form');
-}
-else
-{
-	$tpl->parse('main.new_call_user_name.new_call_form');
-}
-$tpl->parse('main.new_call_user_name');
+$tpl->assign('call_id', $_REQUEST['call_id']);
 
-$tpl->parse('main');
-$content = $tpl->text('main');
-
-$ptpl = new PSUTemplate();
-$ptpl->assign('content', $content);
-$ptpl->display('psu_wrapper.tpl');
+$tpl->display('new_call.tpl');
