--- a/webapp/calllog/new_call.html
+++ b/webapp/calllog/new_call.html
@@ -173,6 +173,8 @@ if($person['email'] != 'generic') {
 
 	$tpl->assign('caller_email', $GLOBALS['user']->userEmailFunction($person['username'], $_REQUEST['call_id'], $person));
 	
+	$tpl->assign('user_quota', $GLOBALS['user']->userQuota($person['username'], $person));
+
 	try {
 		$sTpl = new PSUSmarty();
 		$person = new PSUPerson($person['wp_id'] ? $person['wp_id'] : $person['pidm']);
