--- a/webapp/calllog/update_call_details.html
+++ b/webapp/calllog/update_call_details.html
@@ -124,7 +124,7 @@ if($call_log_username != "" || $caller_user_name != ""){
 $_SESSION['user_message'] = "Thank you for Updating Ticket #".$call_id;
 
 if($_POST['option'] != 'caller' || $_POST['group'] != 0) {
-	header('Location: '.($_GET['redirect'] ? $_GET['redirect'] : 'index.html?new_call=passed&action='.$_POST['action'].'&option='.$_POST['option'].'&group='.$_POST['group'].'&find_type='.$_POST['find_type']));
+	header('Location: '.($_GET['redirect'] ? $_GET['redirect'] : 'calls.html?new_call=passed&action='.$_POST['action'].'&option='.$_POST['option'].'&group='.$_POST['group'].'&find_type='.$_POST['find_type']));
 }
 else {
 	header('Location: '.($_GET['redirect'] ? $_GET['redirect'] : 'index.html?new_call=passed'));
