--- a/webapp/calllog/ajax_backend.html
+++ b/webapp/calllog/ajax_backend.html
@@ -7,12 +7,11 @@ $tpl->assign('call_log_web_home', CALL_LOG_WEB_HOME);
 $tpl->assign('calllog_user_name', $_SESSION['username']);
 
 error_reporting(E_ALL ^ E_NOTICE); 
-$ajax = ($_SERVER['HTTP_X_REQUESTED_WITH'] == 'XMLHttpRequest'||$_GET['ajax']==1) ? true : false;
+if( $_SERVER['HTTP_X_REQUESTED_WITH'] == 'XMLHttpRequest' || $_GET['ajax']==1 ){
 
-switch($_GET['return']) {
-
-	case 'showGroupUsers':
-		if($ajax){
+	switch($_GET['return']) {
+	
+		case 'showGroupUsers':
 			$getGroupUsers = $db->GetAll("SELECT * FROM its_employee_groups, call_log_employee WHERE its_employee_groups.group_id = '$_GET[group_number]' AND call_log_employee.call_log_user_id = its_employee_groups.employee_id AND its_employee_groups.option_id != '0'");
 			for($i=0;$i<=count($getGroupUsers);$i++){
 				$j = $i+1;
@@ -22,26 +21,20 @@ switch($_GET['return']) {
 			}
 			$tpl->parse('main');
 			$tpl->out('main');
-		}
-	break;
-
-    case 'keywordList':
-		if($ajax) {
+		break;
+	
+	    case 'keywordList':
 			ob_clean();
 			echo generateKeywordList($_GET['call_id'], $_GET['details']);
-		}
-	break;
-
-	case 'get_employee_group_info':
-		if($ajax){
+		break;
+	
+		case 'get_employee_group_info':
 			$tpl = new PSU\Template;
 			$tpl->assign( 'groups', getOpenCallGroups() );
 			$tpl->display( 'open_calls.tpl', false );
-		}
-	break;
-
-    case 'restoreRequest': 
-		if($ajax) {
+		break;
+	
+	    case 'restoreRequest': 
 			$restore_full_date_time = $_GET['restore_year']."-".$_GET['restore_month']."-".$_GET['restore_date']." ".$_GET['restore_hour'].":".$_GET['restore_minute'];
 			$less_one_month = strtotime("one month ago", $restore_full_date_time);
 
@@ -119,11 +112,9 @@ switch($_GET['return']) {
 			$tpl->parse('main');
 			$tpl->out('main');
 			exit;
-		}
-	break;
-
-	case 'callHistoryDetails': 
-		if($ajax) {
+		break;
+	
+		case 'callHistoryDetails': 
 			$call_id = $_GET['call_id'];
 			$tpl->assign('this_call_id', $call_id);
 			$tpl->assign('this_caller_username', $_GET['caller_user_name']);
@@ -181,18 +172,14 @@ switch($_GET['return']) {
 			$tpl->parse('main');
 			$tpl->out('main');
 			exit;
-		}
-	break;
-
-	case 'callHistorySummary': 
-		if($ajax) {
+		break;
+	
+		case 'callHistorySummary': 
 			echo $GLOBALS['user']->userCallHistory($_GET['caller']);
 			exit;
-		}
-	break;
-
-	case 'sendCallerEmail':
-		if($ajax) {
+		break;
+	
+		case 'sendCallerEmail':
 			$call_id = $_GET['call_id'];
 			$its_group = $_GET['its_group'];
 			$message = $_GET['message'];
@@ -231,11 +218,9 @@ switch($_GET['return']) {
 			$tpl->parse('main.queueEmailMessage');
 			$tpl->parse('main');
 			$tpl->out('main');
-		}
-	break;
-
-	case 'assign_reorder':
-		if($ajax){
+		break;
+	
+		case 'assign_reorder':
 			$call_id = (int) $_GET['call_id'];
 			$sort_order = $_GET['order'] == 'old' ? 'ASC' : 'DESC';
 			$db->Execute("UPDATE call_log_employee SET update_sort = '$sort_order' WHERE user_name = '{$_SESSION['username']}'");
@@ -246,7 +231,7 @@ switch($_GET['return']) {
 			$ptpl->assign( 'call_id', $call_id );
 			$ptpl->assign( 'history', $history );
 			$ptpl->display( 'ticket-history.tpl', false );
-	}
-	break;
+		break;
 
+	}
 }
