--- a/webapp/calllog/new_call.html
+++ b/webapp/calllog/new_call.html
@@ -183,7 +183,7 @@ $tpl->assign('restore_system_list', PSUHTML::getSelectOptions($restore_system_op
 $tpl->assign('restore_request_func', $GLOBALS['restore']->restoreRequestFunc());
 
 $tpl->assign('call_information', $GLOBALS['user']->callInformation($call_status_options, $call_priority_options, $call_status, $call_priority, $building_options, $building_id, $resnet_call));
-if($person['email'] != 'generic') {
+if($person['identifier'] != 'generic') {
 	$tpl->assign('caller_information', $GLOBALS['user']->getCallerInformation($caller, $_REQUEST['call_id'], $person));
 
 	$tpl->assign('caller_email', $GLOBALS['user']->userEmailFunction($person['username'], $_REQUEST['call_id'], $person));
