deleted some debug things and changed the color of a button

--- a/webapp/calllog/update_call_details.html
+++ b/webapp/calllog/update_call_details.html
@@ -29,7 +29,7 @@ else{
 
 if ($toggle){
 	if ($call_status == 'open'){
-		$call_status = 'closed'
+		$call_status = 'closed';
 	}
 	else{
 		$call_status = 'open';
