Added note functionality as per request

--- a/webapp/ape/user.html
+++ b/webapp/ape/user.html
@@ -40,7 +40,23 @@ if($title_log['source'] == 'ape')
 	if(IDMObject::authZ('admin', $log['attribute']) || IDMObject::authZ('permission', 'ape_attribute_admin'))
 		$tpl->assign('admin_title', true);
 }//end if
-
+/*********************************************************************
+ *    Retrieve Notes
+ *********************************************************************/
+$notes = APENotes::get_notes( $person->wp_id );
+//grab the notes for the user
+if( !isset($notes) ){
+	//if there are no notes, set the count to 0
+	$notes_count = 0;
+}else{
+	$notes_count = APENotes::note_count( $person->wp_id );
+}
+$tpl->assign( 'notes_count', $notes_count );
+//add the notes to the session
+foreach( $notes as $note ){
+	$_SESSION[$note['status']][]=$note['note'];
+}
+$tpl->assign( 'notes', $notes );	
 /*********************************************************************
  *    Set Workflow Permissions
  *********************************************************************/
