--- a/webapp/ape/notes.html
+++ b/webapp/ape/notes.html
@@ -1,15 +1,20 @@
 <?php
+//grabs the user and person the user is looking at
 $myuser = new PSUPerson($_SESSION['wp_id']);
 $person = new PSUPerson($_GET['pidm']);
+//array of choices for the form
 $status_choices = array(
 	'messages' => 'Info',
 	'successes' => 'Success',
 	'errors' => 'Error',
 	'warnings' => 'Warning',
 );
-$notes = APENotes::get_notes( $person->wp_id );
-
+//load all of the notes for the person
+$notes = new \PSU\Person\Notes( $person->wp_id );
+$notes->load();
+//create a new template
 $tpl = new APESmarty();
+//if the notes are set, display them to the user
 if (isset($notes)){
 	$tpl->assign( 'notes', $notes );
 }
@@ -23,7 +28,7 @@ $tpl->assign( 'status_choices', $status_choices );
 switch( $_GET['action'] ){
 	case edit:
 		//needs to load edit page
-		$note = APENotes::get_note($_GET['id']);
+		$note = \PSU\Person\Note::get( $_GET['id'] );
 		$tpl->assign( 'note', $note );
 	break;
 
@@ -34,20 +39,22 @@ switch( $_GET['action'] ){
 			$_SESSION['errors'][]='Please enter a note.';
 		}else{
 			filter_var($args['note'], FILTER_SANITIZE_STRING);
-			$note = stripslashes($args['note']);
+			$args['note'] = stripslashes($args['note']);
 		}
 
 		if(!$args['status']){
 			$_SESSION['errors'][]='Please select a status.';
 		}else{
 			filter_var($args['status'], FILTER_SANITIZE_STRING);
-			$note = stripslashes($args['status']);
+			$args['status'] = stripslashes($args['status']);
 		
 		}
 
 
 		if(count($_SESSION['errors']) <= 0){
-			APENotes::add_note( $person->wp_id, $args['note'], $args['status']);
+			//creates a new note object
+			$note = new \PSU\Person\Note( $args );
+			$note->save();
 			$_SESSION['successes'][]='You have successfully added a new note.';
 		}
 
@@ -55,32 +62,36 @@ switch( $_GET['action'] ){
 	break;
 
 	case delete:
-		//delete the note
-		APENotes::delete_note( $_GET['id'] );
-		//redirect the user back to the page they were on
+		//grabs the note you are trying to deleted
+		$note = \PSU\Person\Note::get( $_GET['id'] );
+		//and deletes it
+		$note->delete();
 		PSUHTML::redirect( $GLOBALS['BASE_URL'] . '/user/' . $person->pidm . '/notes');
 	break;
 
 	case change:
+		//grabs the arguments and filters them
 		$args = $_POST;
 		if(!$args['note']){
 			$_SESSION['errors'][]='Please enter a note.';
 		}else{
 			filter_var($args['note'], FILTER_SANITIZE_STRING);
-			$note = stripslashes($args['note']);
+			$args['note'] = stripslashes($args['note']);
 		}
 
 		if(!$args['status']){
 			$_SESSION['errors'][]='Please select a status.';
 		}else{
 			filter_var($args['status'], FILTER_SANITIZE_STRING);
-			$note = stripslashes($args['status']);
+			$args['status'] = stripslashes($args['status']);
 		
 		}
 
-
+		//if there were no errors
 		if(count($_SESSION['errors']) <= 0){
-			APENotes::edit_note( $_GET['id'], $args['note'], $args['status']);
+			//edit the note and save it
+			$note->edit( $args );
+			$note->save();
 			$_SESSION['successes'][]='You have successfully edited a note.';
 		}
 
@@ -88,6 +99,6 @@ switch( $_GET['action'] ){
 
 	break;
 }//end switch
-
+//display the manage notes template
 $tpl->display('notes.tpl');
 
